pod-security/disallow-privileged-containers/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: "1.16.2"
    kyverno.io/kubernetes-version: "1.34"
    policies.kyverno.io/description: >-
      Privileged containers have access to all Linux kernel capabilities and devices.
      Running a container as privileged is equivalent to running as root on the host.
      This policy disallows privileged containers in all non-system namespaces.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: disallow-privileged-containers
      match:
        any:
          - resources:
              kinds: [Pod]
              operations: [CREATE, UPDATE]
      exclude:
        any:
          - resources:
              namespaces: [kube-system, kyverno]
      validate:
        cel:
          expressions:
            - expression: >-
                object.spec.containers.all(c,
                  !has(c.securityContext) ||
                  !has(c.securityContext.privileged) ||
                  c.securityContext.privileged == false
                ) &&
                (!has(object.spec.initContainers) || object.spec.initContainers.all(c,
                  !has(c.securityContext) ||
                  !has(c.securityContext.privileged) ||
                  c.securityContext.privileged == false
                ))
              message: "Privileged containers are not allowed. Remove securityContext.privileged or set it to false."
